# Argus-Honeywell-Hackathon

./: LICENSE  MIGRATE_SETUP.md  README.md  download_models.sh  requirements-eval.txt  requirements-sp.txt
data/scenarios/: scenario_A_easy.yaml  scenario_B_hard.yaml  scenario_C_loop.yaml  scenario_D_lights_off.yaml  scenario_E_tunnel_200m.yaml
docker/: Dockerfile  HOST_SETUP.md  build_image.sh  colcon_build.sh  demo.sh  requirements-sp-min.txt  run.sh
docs/: CONTRACT.md
docs/daily_logs/: day2.md  day3.md  day4.md  day5.md  day6.md  day7.md
docs/figures/: architecture.dot
scripts/: _audit_be_loopback.py  _audit_be_sub.py  _audit_relaunch_sp.sh  _bag_stereo_offset.py  _cam_grab.py  _check_map_points.py  _excite_validate.sh  _health_selftest.py  _health_smoke.sh  _health_sniff.py  _killsim.sh  _live_ramp_validate.sh  _loop_diag.sh  _render_diag.sh  _replot_trajectory.py  _sp_livetest.sh  _sp_save_overlay.py  _sp_selftest.py  analyze_scenario_D.py  blackout.sh  build.sh  build_dashboard.py  clean.sh  compare_c1_c2.py  demo.sh  env.sh  flicker.sh  fly_circuit.py  fly_scenario_D.py  fly_uturn_laps.py  make_map_demo_bag.sh  make_migration_pack.sh  make_scenarioE_figures.py  make_scenario_D_synth.py  plot_flight_strip.py  record_baseline_bag.sh  record_excite_bag.sh  record_scenario_A.sh  record_scenario_C_loop.sh  record_scenario_C_shuttle.sh  (+17 more)
src/argus_bringup/: README.md  package.xml  setup.cfg  setup.py
src/argus_bringup/argus_bringup/: acceptance.py  camera_info_patch.py  check_stack.py  drive_drone.py  record_bag.py
src/argus_bringup/config/: argus_bridge.yaml
src/argus_bringup/launch/: argus_sim.launch.py
src/argus_bringup/rviz/: argus_demo.rviz  argus_map.rviz
src/argus_health/: README.md  package.xml  setup.cfg  setup.py
src/argus_health/argus_health/: health_monitor.py
src/argus_health/launch/: argus_health.launch.py
src/argus_msgs/: CMakeLists.txt  README.md  package.xml
src/argus_msgs/msg/: UncertaintyMap.msg  VIOHealth.msg
src/argus_nav/: README.md  package.xml  setup.cfg  setup.py
src/argus_nav/argus_nav/: occupancy_mapper.py  reactive_avoider.py  stereo_depth.py
src/argus_nav/launch/: argus_nav.launch.py
src/argus_nav/rviz/: argus_nav.rviz
src/argus_sim/: CMakeLists.txt  README.md  package.xml
src/argus_sim/hooks/: argus_sim.dsv.in
src/argus_sim/models/argus_drone/: model.config  model.sdf
src/argus_sim/scripts/: flicker_light.sh
src/argus_sim/worlds/: generate_tunnel_circuit.py  generate_world.py  tunnel_circuit.sdf  warehouse_corridor.sdf
src/argus_superpoint/: README.md  package.xml  setup.cfg  setup.py
src/argus_superpoint/argus_superpoint/: superpoint_node.py
src/argus_superpoint/launch/: superpoint.launch.py
src/argus_vio/: CMakeLists.txt  README.md  package.xml
src/argus_vio/config/: argus_cam0_pinhole.yaml  argus_cam1_pinhole.yaml  argus_stereo_imu_config.yaml  argus_stereo_imu_eval_config.yaml  argus_stereo_imu_superpoint_config.yaml
src/argus_vio/launch/: argus_vio.launch.py  argus_vio_loop.launch.py
