<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>argus_sim</name>
  <version>0.1.0</version>
  <description>ARGUS Gazebo Harmonic simulation assets (warehouse corridor world).</description>
  <maintainer email="vittal.muku@gmail.com">vittal</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_gz_sim</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
