<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>argus_vio</name>
  <version>0.2.0</version>
  <description>
    ARGUS Pillar-1 VIO wrapper. Configures and launches the VINS-Fusion ROS2
    stereo-inertial estimator against the ARGUS simulator topic contract, and
    remaps its outputs onto the frozen /argus/vio/* schema.
  </description>
  <maintainer email="vittal.muku@gmail.com">vittal</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime: the VINS-Fusion estimator node (third_party, symlinked into src). -->
  <exec_depend>vins</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
